# slitherbox

./: .gitignore  README.md  echo  pyproject.toml  slitherbox  snakebox
src/slitherbox/: arch.py  cat.py  echo.py  false.py  hostname.py  mkdir.py  mv.py  pwd.py  rm.py  sb_install.py  sb_list.py  sb_uninstall.py  sleep.py  slitherbox  slitherbox.py  touch.py  true.py  tty.py  uname.py  which.py  whoami.py
src/utilities/: cat.py  mkdir.py  sb_install.py  sb_list.py  sb_uninstall.py  true.py  tty.py  whoami.py
utilities/: arch.py  cat.py  echo.py  false.py  hostname.py  mkdir.py  mv.py  pwd.py  rm.py  sb_install.py  sb_list.py  sb_uninstall.py  sleep.py  touch.py  tty.py  uname.py  whoami.py
