[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slitherbox"
version = "0.0.1"
author = "joshiemoore"
author_email = "jxm5210@g.rit.edu"
description = "A drop-in pure-Python replacement for common shell utilities"
readme = "README.md"
license = { file="LICENSE.txt" }
