[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slitherbox"
version = "0.0.2"
authors = [
  { name="joshiemoore", email="jxm5210@g.rit.edu" }
]
description = "A drop-in pure-Python replacement for common shell utilities"
readme = "README.md"
license = { file="LICENSE.txt" }

[project.urls]
"Homepage" = "https://github.com/joshiemoore/slitherbox"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
slitherbox = ["slitherbox"]
